STARTED MODIFYING COMPARION TABLE. by 26th/06/2024